k8s/deployment-db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jvtheque-db
spec:
  replicas: 3
  selector:
    matchLabels:
      app: jvtheque-db
  template:
    metadata:
      labels:
        app: jvtheque-db
    spec:
      containers:
        - name: postgres
          image: postgres:17.5-alpine3.22
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: jvtheque-db-pvc
