k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: jvtheque-db-service
spec:
  type: ClusterIP
  selector:
    app: jvtheque-db
  ports:
    - port: 5432
      targetPort: 5432
