k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jvtheque-service
spec:
  type: NodePort
  selector:
    app: jvtheque
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
